bin/testsuite/tests/compiler/src/errors/compiler1502.swg
#global testerror "Err0587"

#test
{
    var toto[512], titi: u16
}